documentacion/obtenida/ARINC 429/driver and software/CM429-1/API/C41W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef long LONG;
typedef long * LPLONG;
typedef const char * LPCSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

C41W32API VOID __stdcall C41_TimerClear(HCARD handleval);

C41W32API ULONG __stdcall C41_TimerRd(HCARD handleval);

C41W32API USHORT __stdcall C41_TimerResolution(INT timerresol,HCARD handleval);


/**
*
*  CM429-1 717 Driver functions.
*
**/

C41W32API ERRVAL __stdcall C41_717Boot(INT handleval);

C41W32API ERRVAL __stdcall C41_717FrameWipe(INT channum,INT handleval);

C41W32API ERRVAL __stdcall C41_717SubFrmClear(INT channum,INT handleval);

C41W32API ERRVAL __stdcall C41_717SubFrmDataWipe(INT subframe,INT channum,INT handleval);

C41W32API LONG __stdcall C41_717SubFrmPtrDefault(INT channum,INT handleval);

C41W32API LONG __stdcall C41_717SubFrmPtrSet(INT subfrmnum,INT destsubfrm,INT channum,INT handleval);

C41W32API ERRVAL __stdcall C41_717SubFrmRecordWipe(INT subframe,INT channum,INT handleval);

C41W32API ERRVAL __stdcall C41_717SubFrmWordConfig(LONG configval,INT subframe,INT wordnum,INT channum,INT handleval);

C41W32API ERRVAL __stdcall C41_717SubFrmWordConfigEx(LONG configval,INT subframe,INT channum,INT handleval);

C41W32API INT __stdcall C41_717SubFrmWordRd(INT subframe,INT wordnum,INT channum,INT handleval);

C41W32API BOOL __stdcall C41_717SyncTest(INT channum,INT handleval);

C41W32API ERRVAL __stdcall C41_717SyncWordDefault(INT channum,INT handleval);

C41W32API ERRVAL __stdcall C41_717SyncWordSet(INT sync1,INT sync2,INT sync3,INT sync4,INT channum,INT handleval);

C41W32API VOID __stdcall C41_Ch717Disable(INT handleval);

C41W32API VOID __stdcall C41_Ch717Enable(INT handleval);


/**
*
*  Internal functions used by the CM429-1 Driver.
*
**/

C41W32API USHORT __stdcall C41_AcgaRd(USHORT addrval,HCARD handleval);

C41W32API VOID __stdcall C41_AcgaWr(USHORT value,USHORT addrval,HCARD handleval);

C41W32API ERRVAL __stdcall C41_AsciiToMant(LPCSTR str,LPLONG mant,LPINT exp);

C41W32API ERRVAL __stdcall C41_CardClose(HCARD handleval);

C41W32API VOID __stdcall C41_CardInit(VOID);

C41W32API HCARD __stdcall C41_CardOpen(INT cardnum);

C41W32API HCARD __stdcall C41_CardOpenEx(LPCSTR cardname,INT rcvcount,INT xmtcount,INT cardnum);

C41W32API HCARD __stdcall C41_CardOpenExx(LPCSTR cardname,INT rcvcount,INT xmtcount,INT cardnum,LPVOID hAppWnd,USHORT uiRemovalMsg);

C41W32API INT __stdcall C41_ChPauseCheck(INT channum,HCARD handleval);

C41W32API USHORT __stdcall C41_ChStart(INT channum,HCARD handleval);

C41W32API USHORT __stdcall C41_ChStop(INT channum,HCARD handleval);

C41W32API VOID __stdcall C41_CommCall(USHORT addrval,HCARD handleval);

C41W32API ERRVAL __stdcall C41_CommCheck(HCARD handleval);

C41W32API ERRVAL __stdcall C41_CommDisable(HCARD handleval);

C41W32API ERRVAL __stdcall C41_CommEnable(HCARD handleval);

C41W32API USHORT __stdcall C41_CommRd(USHORT addrval,HCARD handleval);

C41W32API VOID __stdcall C41_CommRun(LPUSHORT dataptr,USHORT datacount,LPUSHORT codeptr,USHORT codecount,HCARD handleval);

C41W32API VOID __stdcall C41_CommStrRd(LPUSHORT valueptr,USHORT addrval,USHORT count,HCARD handleval);

C41W32API VOID __stdcall C41_CommStrWr(LPUSHORT valueptr,USHORT addrval,USHORT count,HCARD handleval);

C41W32API VOID __stdcall C41_CommTxen(USHORT addrval,HCARD handleval);

C41W32API VOID __stdcall C41_CommWr(USHORT value,USHORT addrval,HCARD handleval);

C41W32API ULONG __stdcall C41_ConvFromArinc(ULONG msgval);

C41W32API ULONG __stdcall C41_ConvToArinc(ULONG msgval);

C41W32API ULONG __stdcall C41_CycleAdvance(VOID);

C41W32API ERRVAL __stdcall C41_CycleBuild(INT basemsgnum,ULONG nummsgs,LPINT minperiod,LPINT maxperiod,INT channum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_CycleBuildEx(INT basemsgnum,INT nummsgs,LPINT minperiod,LPINT maxperiod,INT speed,LPVOID buf,ULONG bufsize,INT channum,HCARD handleval);

C41W32API INT __stdcall C41_CycleBuildSt(INT basemsgnum,INT nummsgs,LPINT minperiod,LPINT maxperiod,INT channum,HCARD handleval);

C41W32API ULONG __stdcall C41_CycleCalc(VOID);

C41W32API ERRVAL __stdcall C41_CycleCheck(LPINT minperiod,LPINT maxperiod);

C41W32API VOID __stdcall C41_CycleCheckEnd(VOID);

C41W32API VOID __stdcall C41_CycleCheckMiddle(INT msgnum,ULONG minlen,ULONG midlen,ULONG maxlen);

C41W32API VOID __stdcall C41_CycleCheckReal(INT msgnum,ULONG minlen,ULONG midlen,ULONG maxlen);

C41W32API VOID __stdcall C41_CycleCheckStart(VOID);

C41W32API ULONG __stdcall C41_CycleConflicts(VOID);

C41W32API ERRVAL __stdcall C41_CycleDivide(VOID);

C41W32API ULONG __stdcall C41_CycleFix(VOID);

C41W32API VOID __stdcall C41_CycleFixEnd(VOID);

C41W32API VOID __stdcall C41_CycleFixMiddle(ULONG conflicts);

C41W32API VOID __stdcall C41_CycleFixStart(VOID);

C41W32API VOID __stdcall C41_CycleHook(INT index,LPVOID ptr);

C41W32API ERRVAL __stdcall C41_CycleInsert(ULONG events,ULONG index,INT msgnum,ULONG gapval,INT channum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_CycleInsertEnd(ULONG events,INT channum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_CycleInsertStart(ULONG events,INT channum,HCARD handleval);

C41W32API VOID __stdcall C41_CycleLayout(VOID);

C41W32API ULONG __stdcall C41_CycleMaxval(LPULONG array,ULONG arraycount);

C41W32API ULONG __stdcall C41_CycleMinval(LPULONG array,ULONG arraycount);

C41W32API ERRVAL __stdcall C41_CycleParse(INT basemsgnum,INT channum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_CycleReset(VOID);

C41W32API ULONG __stdcall C41_CycleRotate(VOID);

C41W32API INT __stdcall C41_CycleShift(INT msgnum,INT value);

C41W32API ERRVAL __stdcall C41_CycleSlide(VOID);

C41W32API VOID __stdcall C41_CycleSlideEnd(VOID);

C41W32API VOID __stdcall C41_CycleSlideMiddle(ULONG index,ULONG count,ULONG conflicts);

C41W32API VOID __stdcall C41_CycleSlideStart(ULONG factor);

C41W32API VOID __stdcall C41_CycleSort(VOID);

C41W32API ULONG __stdcall C41_CycleToBit(ULONG value);

C41W32API ULONG __stdcall C41_CycleToMsec(ULONG value);

C41W32API VOID __stdcall C41_CycleUnsort(VOID);

C41W32API ULONG __stdcall C41_CycleWalk(VOID);

C41W32API VOID __stdcall C41_DataClear(USHORT maskval,USHORT addrval,INT channum,HCARD handleval);

C41W32API USHORT __stdcall C41_DataGet(USHORT maskval,USHORT addrval,INT channum,HCARD handleval);

C41W32API USHORT __stdcall C41_DataRead(USHORT addrval,INT channum,HCARD handleval);

C41W32API VOID __stdcall C41_DataSet(USHORT maskval,USHORT addrval,INT channum,HCARD handleval);